Fix CI failures across all SDKs
- Python: Add LICENSE symlink for hatchling build
- Java: Replace Stream.toList() with collect() for Java 11 compatibility
- n8n: Fix invalid JSON escape sequence in package.json
- Rust: Apply cargo fmt formatting
- TypeScript: Add eslint dependencies and config

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>